. correct test class names * use @EmbeddedKafka instead of static EmbeddedKafkaRule instantiation